# mangaRepack

./: LICENCE  README.md  pyproject.toml
src/mangaRepack/: __main__.py  config.toml  repack.py
