[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mangaRepack = ["*.toml"]

[project]
name = "mangaRepack"
dynamic = ["version"]
requires-python = ">3.13"

dependencies = [
  "argparse"
]


[project.scripts]
mangaRepack = "mangaRepack.__main__:main"